tests/ui/resolve/suggest-path-instead-of-mod-dot-item.stderr
error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:17:5
   |
LL |     a.I
   |     ^- help: use the path separator to refer to an item: `::`

error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:23:5
   |
LL |     a.g()
   |     ^- help: use the path separator to refer to an item: `::`

error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:29:5
   |
LL |     a.b.J
   |     ^- help: use the path separator to refer to an item: `::`

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:35:5
   |
LL |     pub const I: i32 = 1;
   |     --------------------- similarly named constant `I` defined here
...
LL |     a::b.J
   |     ^^^^
   |
help: use the path separator to refer to an item
   |
LL |     a::b::J
   |         ~~
help: a constant with a similar name exists
   |
LL |     a::I.J
   |        ~

error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:42:5
   |
LL |     a.b.f();
   |     ^- help: use the path separator to refer to an item: `::`

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:46:12
   |
LL |     pub const I: i32 = 1;
   |     --------------------- similarly named constant `I` defined here
...
LL |     v.push(a::b);
   |            ^^^-
   |               |
   |               help: a constant with a similar name exists: `I`

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:52:5
   |
LL |     pub const I: i32 = 1;
   |     --------------------- similarly named constant `I` defined here
...
LL |     a::b.f()
   |     ^^^^
   |
help: use the path separator to refer to an item
   |
LL |     a::b::f()
   |         ~~
help: a constant with a similar name exists
   |
LL |     a::I.f()
   |        ~

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:59:5
   |
LL |     pub const I: i32 = 1;
   |     --------------------- similarly named constant `I` defined here
...
LL |     a::b
   |     ^^^-
   |        |
   |        help: a constant with a similar name exists: `I`

error[E0423]: expected function, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:65:5
   |
LL |     pub const I: i32 = 1;
   |     --------------------- similarly named constant `I` defined here
...
LL |     a::b()
   |     ^^^-
   |        |
   |        help: a constant with a similar name exists: `I`

error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:72:9
   |
LL | / macro_rules! module {
LL | |     () => {
LL | |         a
   | |         ^ not a value
LL | |
LL | |
LL | |     };
LL | | }
   | |_- in this expansion of `module!`
...
LL |       module!().g::<()>(); // no `help` here!
   |       --------- in this macro invocation

error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:72:9
   |
LL | / macro_rules! module {
LL | |     () => {
LL | |         a
   | |         ^ not a value
LL | |
LL | |
LL | |     };
LL | | }
   | |_- in this expansion of `module!`
...
LL |       module!().g; // no `help` here!
   |       --------- in this macro invocation

error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:80:9
   |
LL | / macro_rules! create {
LL | |     (method) => {
LL | |         a.f()
   | |         ^- help: use the path separator to refer to an item: `::`
LL | |
...  |
LL | |     };
LL | | }
   | |_- in this expansion of `create!`
...
LL |       let _ = create!(method);
   |               --------------- in this macro invocation

error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:85:9
   |
LL | / macro_rules! create {
LL | |     (method) => {
LL | |         a.f()
LL | |
...  |
LL | |         a.f
   | |         ^- help: use the path separator to refer to an item: `::`
...  |
LL | |     };
LL | | }
   | |_- in this expansion of `create!`
...
LL |       let _ = create!(field);
   |               -------------- in this macro invocation

error: aborting due to 13 previous errors

For more information about this error, try `rustc --explain E0423`.
